# swarm-sub-registry

./: .gitignore  .gitmodules  CLAUDE.md  ComputeHash.sol
contracts/: foundry.toml  remappings.txt
contracts/script/: DeploySubscriptionRegistry.s.sol  DeployVolumeRegistry.s.sol
contracts/src/: SubscriptionRegistry.sol  VolumeRegistry.sol
contracts/test/: AccountStateMachine.t.sol  ActiveSetAndViews.t.sol  ChargeCorrectness.t.sol  (+10 more)
dash/: README.md  app.js  index.html  run.sh
docs/: safe-propose.md
gas-boy/: .dev.vars.example  package.json  tsconfig.json  wrangler.jsonc
notes/: DESIGN.md  TEST-PLAN.md  usage.md  words.md
orion/: .gitignore  .gitmodules  ARCHITECTURE.md  GETTING_STARTED.md  ISSUES.md  README.md  WHY_PYTHON.md  pyproject.toml
orion/deploy/: README.md  compose.yaml  docker-compose.yml  prometheus.yml
orion/deploy/grafana/dashboards/: swarm.json
orion/deploy/grafana/provisioning/dashboards/: orion.yml
orion/deploy/grafana/provisioning/datasources/: prometheus.yml
orion/src/orion/: __init__.py  __main__.py  artifacts.py  chain.py  cli.py  constellation.py  metrics.py  participants.py  priming.py  state.py
orion/src/orion/data/: multicall3.hex
orion/src/orion/profiles/: __init__.py  swarm.py  swarm_metrics.py
orion/tests/: test_artifacts.py  test_chain.py  test_constellation.py  test_gas_boy_e2e.py  test_participants.py  test_state.py
scripts/: approve-allowance.sh  create-volumes.sh  demo-flow.sh  l4-sepolia-smoke.sh  plot-batch-balances.sh
tg-bot/: .env.example  .gitignore  package.json
ui/: package.json  pnpm-lock.yaml
(+28 files in other folders)
