[project]
name = "orion"
version = "0.0.1"
description = "General-purpose construction kit for local Swarm / multi-contract EVM test harnesses"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.0",
    "eth-account>=0.13",
    "eth-hash[pycryptodome]>=0.7",
    "eth-keys>=0.5",
    "click>=8.1",
]

[project.scripts]
orion = "orion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orion"]
